--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
         #docker rm portfolio
 
         run: |
-          docker container run --name portfolio -p 2308:80 -p 443:443 -d sphinx
+          docker container run --name sphinx -p 2308:80 -p 443:443 -d sphinx
           docker start sphix
