--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
           docker stop sphinx   
           docker rm sphinx
           docker container run --name sphinx -p 2308:80 -p 2309:443 -d sphinx
-          docker start sphix
+          docker start sphinx
