--- a/site.webmanifest.json
+++ b/site.webmanifest.json
@@ -3,25 +3,25 @@
   "short_name": "Sphinx",
   "icons": [
     {
-      "src": "assets/icons/manifest-icon-192.maskable.png",
-      "sizes": "192x192", 
+      "src": "manifest-icon-192.maskable.png",
+      "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "assets/icons/manifest-icon-192.maskable.png",
+      "src": "manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "assets/icons/manifest-icon-512.maskable.png",
+      "src": "manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "assets/icons/manifest-icon-512.maskable.png",
+      "src": "manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
