--- a/site.webmanifest.json
+++ b/site.webmanifest.json
@@ -1,8 +1,8 @@
 {
   "display": "standalone",
   "short_name": "Sphinx",
-  "start_url": "/",
-  "scope": "/",
+  "start_url": "https://sphinxquiz.fr/",
+  "scope": "./",
   "icons": [
     {
       "src": "manifest-icon-192.maskable.png",
